--- a/canada.html
+++ b/canada.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <met a name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canada - Explore the Landmarks</title>
     <style>
         /* Base styling */
@@ -12,6 +12,8 @@
             font-family: Arial, sans-serif;
             color: #333;
         }
+
+        /* xtra comment */
 
         /* Navigation styles */
         .nav-container {
