--- a/currency.html
+++ b/currency.html
@@ -5,28 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Exchange</title>
     <style>
+
         body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            background-color: #e9ecef; /* Light grey background */
-            color: #333;
-        }
+  background-color: rgba(7, 51, 22, 0.8); /* Set the background color of the webpage */
+  margin: 0;                             /* Remove default margin */
+  font-family: 'Times New Roman', serif; /* Set font family to Times New Roman */
+}
 
         /* Navigation styles */
-        .nav-container {
+       .nav-container {
             display: flex;
             justify-content: center;
-            padding: 15px 0;
-            background-color: #007bff; /* Navigation bar background */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 10px 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            z-index: 1000;
         }
 
         .button {
             font-size: 18px;
             text-decoration: none;
-            color: #fff; /* White text for better contrast */
-            background-color: #007bff; /* Button background */
-            padding: 10px 15px;
+            color: #333;
+            background-color: #fff;
+            padding: 10px 20px;
             border-radius: 8px;
             margin: 0 10px;
             display: flex;
@@ -35,16 +35,15 @@
         }
 
         .button img {
-            width: 28px; /* Smaller icon size */
-            height: 28px;
-            margin-right: 8px; /* Space between icon and text */
+            width: 36px;
+            height: 36px;
         }
 
         .container {
             max-width: 600px;
             margin: 40px auto;
             padding: 20px;
-            background: white;
+            background: rgba(117, 128, 134, 0.8);
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
             text-align: center;
@@ -53,7 +52,7 @@
         h1 {
             font-size: 28px;
             margin-bottom: 20px;
-            color: #007bff;
+            color: white;
         }
 
         .currency-row {
