added more information

--- a/canada.html
+++ b/canada.html
@@ -12,7 +12,7 @@
             font-family: Arial, sans-serif;
             color: #333;
         }
-
+        /*simplify the information, pros and cons, flights, reccommened flight if i figure it out */
         /* xtra comment */
 
         /* Navigation styles */
@@ -219,7 +219,7 @@
         <div class="category-box">
             <h2>Landmarks</h2>
             <ul>
-                <li class="list-item" onclick="showOverlay('https://cdn.britannica.com/62/85162-050-C8698F1F/CN-Tower-Toronto.jpg', 'The CN Tower, standing at 553.3 meters (1,815 feet), was once the tallest freestanding structure in the world. It features an observation deck with breathtaking views of Toronto and Lake Ontario. Visitors can dine in the 360 Restaurant, which rotates for a panoramic view of the city. The EdgeWalk is an exhilarating experience where you can walk around the tower\'s edge at a height of 356 meters. For families, the tower offers engaging exhibits about Toronto\'s history and technology. Make sure to visit during sunset for a stunning view!')">
+                <li class="list-item" onclick="showOverlay('https://cdn.britannica.com/62/85162-050-C8698F1F/CN-Tower-Toronto.jpg', 'The CN Tower, standing at 553.3 meters (1,815 feet), was once the tallest freestanding structure in the world. It features an observation deck with breathtaking views of Toronto and Lake Ontario. Visitors can dine in the 360 Restaurant, which rotates for a panoramic view of the city. The EdgeWalk is an exhilarating experience where you can walk around the tower\'s edge at a height of 356 meters. For families, the tower offers engaging exhibits about Toronto\'s history and technology. Make sure to visit during sunset for a stunning view! The benifits of going here is that it is an Iconic Landmark, Stunning view, and a The revolving 360 Restaurant offers fine dining with a view, a unique experience at high altitudes. However the downside to this is that this location is quite popular, meaning this area is crowded. Not to mention this experience is pricy and if the weather is cloudly the visibility might be low and impact your experience.')">
                     <img src="https://cdn.britannica.com/62/85162-050-C8698F1F/CN-Tower-Toronto.jpg" alt="CN Tower">
                     <div>
                         <strong>CN Tower</strong> - Toronto, Ontario
