--- a/page1.html
+++ b/page1.html
@@ -34,6 +34,7 @@
         .na-container a:hover {
             border-color: #ffdbbb;
         }
+        /*reviews*/
 
     </style>
     <link rel="stylesheet" href="styles-page1.css">
