--- a/usa.html
+++ b/usa.html
@@ -91,6 +91,28 @@
     text-decoration: none;
 }
 
+.game-box {
+    width: 200px; /* Adjust as needed */
+    height: 100px; /* Adjust as needed */
+    background-color: white; /* Change background color */
+    color: white; /* Text color */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px; /* Rounded corners */
+    text-decoration: none; /* Remove underline */
+    margin: 20px; /* Space around the box */
+    margin-left: 800px;
+    margin-top: -120px;
+}
+
+.game-box a {
+    color: rgb(0, 0, 0); /* Text color */
+    font-size: 18px; /* Font size */
+    text-decoration: none;
+}
+       
+
 
 
 
@@ -329,6 +351,8 @@
 <div class="flight-box">
     <a href="flights.html" target="_blank">Find Flights</a>
 </div>
-
+<div class="game-box">
+    <a href="game.html" target="_blank">Adventure Game</a>
+</div>
 
 </html>
