--- a/currency.html
+++ b/currency.html
@@ -13,32 +13,51 @@
         }
 
         /* Navigation styles */
-        .nav-container {
-            display: flex;
-            justify-content: center;
-            padding: 15px 0;
-            background-color: #007bff; /* Navigation bar background */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
         .button {
-            font-size: 18px;
-            text-decoration: none;
-            color: #fff; /* White text for better contrast */
-            background-color: #007bff; /* Button background */
-            padding: 10px 15px;
-            border-radius: 8px;
-            margin: 0 10px;
-            display: flex;
-            align-items: center;
-            transition: background-color 0.3s;
-        }
+                font-size: 18px;
+                text-decoration: none;
+                color: #333;
+                background-color: #fff;
+                padding: 10px 20px;
+                border-radius: 8px;
+                margin: 0 10px;
+                display: flex;
+                align-items: center;
+                transition: background-color 0.3s;
+            }
 
-        .button img {
-            width: 28px; /* Smaller icon size */
-            height: 28px;
-            margin-right: 8px; /* Space between icon and text */
-        }
+            .button img {
+                width: 36px;
+                height: 36px;
+            }
+
+            .nav-container {
+                display: flex;
+                justify-content: space-between;
+                /* Space buttons within the container */
+                align-items: center;
+                /* Vertically center the items */
+                padding: 10px 20px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+                z-index: 1000;
+                position: relative;
+                /* Enable positioning of child elements */
+                padding: 15px;
+            }
+
+            .previous-button {
+                position: absolute;
+                /* Position it absolutely */
+            }
+
+            .home-button {
+                position: absolute;
+                /* Position it absolutely */
+                left: 50%;
+                /* Center it in the container */
+                transform: translateX(-50%);
+                /* Offset by half its width to center */
+            }
 
         .container {
             max-width: 600px;
@@ -53,13 +72,13 @@
         h1 {
             font-size: 28px;
             margin-bottom: 20px;
-            color: #007bff;
+            color: #000;
         }
 
         .currency-row {
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center; /* Center align for stacking */
             margin-bottom: 15px;
         }
 
@@ -83,21 +102,6 @@
             cursor: not-allowed; /* Not editable */
         }
 
-        button {
-            padding: 8px 16px; /* Smaller button size */
-            background-color: #007bff; /* Button background */
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #0056b3; /* Darker blue on hover */
-        }
-
         @media (max-width: 480px) {
             .currency-row {
                 flex-direction: column; /* Stack elements on smaller screens */
@@ -119,11 +123,13 @@
 
     <!-- Navigation Buttons -->
     <div class="nav-container">
-        <a href="page1.html" class="button">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxGkYAnjAMXJLhnDopmXg6RWBe6Iyk-k9Ceg&s" alt="Previous Page" /> Previous
+        <a href="page1.html" class="button previous-button">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxGkYAnjAMXJLhnDopmXg6RWBe6Iyk-k9Ceg&s"
+                alt="Previous Page" />
         </a>
-        <a href="index.html" class="button">
-            <img src="https://static.vecteezy.com/system/resources/thumbnails/022/013/913/small/home-icon-illustration-image-vector.jpg" alt="Home" /> Home
+        <a href="index.html" class="button home-button">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/022/013/913/small/home-icon-illustration-image-vector.jpg"
+                alt="Home" />
         </a>
     </div>
 
@@ -133,7 +139,6 @@
             <input type="number" id="amount" placeholder="Amount" />
             <select class="currency-input" id="fromCurrency"></select>
         </div>
-        <button id="swapButton">Swap</button>
         <div class="currency-row">
             <select class="currency-input" id="toCurrency"></select>
             <input type="text" id="outputAmount" placeholder="Converted Amount" readonly />
@@ -183,21 +188,9 @@
             }
         }
 
-        function swapCurrencies() {
-            const fromCurrency = document.getElementById("fromCurrency");
-            const toCurrency = document.getElementById("toCurrency");
-
-            const temp = fromCurrency.value;
-            fromCurrency.value = toCurrency.value;
-            toCurrency.value = temp;
-
-            updateExchange();
-        }
-
         document.getElementById("amount").addEventListener("input", updateExchange);
         document.getElementById("fromCurrency").addEventListener("change", updateExchange);
         document.getElementById("toCurrency").addEventListener("change", updateExchange);
-        document.getElementById("swapButton").addEventListener("click", swapCurrencies);
 
         window.onload = populateCurrencyDropdowns;
     </script>
